// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feedback test cases Render Check for invalid 1`] = `
<DocumentFragment>
  <span
    class="css-1ght81v"
  >
    Please provide a valid value
  </span>
</DocumentFragment>
`;

exports[`Feedback test cases Render check for valid 1`] = `
<DocumentFragment>
  <span
    class="css-56mda7"
  >
    Looks Good!
  </span>
</DocumentFragment>
`;
